--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,7 +12,7 @@ phases:
       - echo Build completed
 artifacts:
   files:
-    - target/*.jar
+    - ./target/*.war
     - scripts/*.sh
     - appspec.yml
   discard-paths: yes
