--- a/appspec.yml
+++ b/appspec.yml
@@ -12,10 +12,10 @@ permissions:
     group: ec2-user
 
 hooks:
-  BeforeInstall:
-    - location: server_clear.sh
-      timeout: 300
-      runas: ec2-user
+  # BeforeInstall:
+  #   - location: server_clear.sh
+  #     timeout: 300
+  #     runas: ec2-user
   AfterInstall:
     - location: fix_privileges.sh
       timeout: 300
