--- a/appspec.yml
+++ b/appspec.yml
@@ -2,7 +2,7 @@ version: 0.0
 os: linux
 
 files:
-  - source: webapp.war
+  - source: ./webapp.war
     destination: /home/ec2-user/server
 
 permissions:
