--- a/appspec.yml
+++ b/appspec.yml
@@ -16,10 +16,10 @@ hooks:
   #   - location: server_clear.sh
   #     timeout: 300
   #     runas: ec2-user
-  AfterInstall:
-    - location: fix_privileges.sh
-      timeout: 300
-      runas: ec2-user
+  # AfterInstall:
+  #   - location: fix_privileges.sh
+  #     timeout: 300
+  #     runas: ec2-user
   ApplicationStart:
     - location: server_start.sh
       timeout: 20
